src/app/calendar-container/calendar-container.component.css
.selector {
    /* display: flex;
    align-items: center;
    justify-content: space-evenly; */
    background-color: #fff;
    color: #484747;
    text-align: center;
    padding: 8.7px;
    border-bottom: 1px solid rgb(200, 200, 200);
    border-left: 1px solid rgb(200, 200, 200);

    position: relative;

}

:host {
    flex: 1;
}

.calendar {
    width: 100%;
    height: 100%;
    display: flex;
    flex-direction: column;
}

router-outlet.router-flex + * {
    display: flex;
    flex: 1 1 auto;
    flex-direction: column;
  }

#calendar-controls {
    margin: 0 auto;
}

#calendar-controls span {
    margin: 0 10px;
}

#month-week-switch {
    font-size: 0.8rem;
    position: absolute;
    right: 10px;
    top: 7px;
    /* bottom: 0px; */
}

#month-switch {
    border-top-right-radius: 4px;
    border-bottom-right-radius: 4px;   
    border: 1px solid #656565;
    padding: 3px;
}

#month-switch.active {
    background: #656565;
    color: #fff;
}


#week-switch.active {
    background: #656565;
    color: #fff;
}

#week-switch {
    border-top-left-radius: 4px;
    border-bottom-left-radius: 4px;
    border: 1px solid #656565;
    padding: 3px;

}

